2009-08-04  Juri Linkov  <juri@jurta.org>

	* files.el: Commands to add/delete file/directory-local variables.
	(read-file-local-variable, read-file-local-variable-value)
	(read-file-local-variable-mode, modify-file-local-variable)
	(modify-file-local-variable-prop-line)
	(modify-dir-local-variable): New functions.
	(add-file-local-variable, delete-file-local-variable)
	(add-file-local-variable-prop-line, delete-file-local-variable-prop-line)
	(add-dir-local-variable, delete-dir-local-variable)
	(copy-file-locals-to-dir-locals, copy-dir-locals-to-file-locals)
	(copy-dir-locals-to-file-locals-prop-line): New commands.

2009-08-04  Chong Yidong  <cyd@stupidchicken.com>

	* abbrev.el (insert-abbrev-table-description): Prettify output.
	Suggested by Karl Chen.

2009-08-04  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-frame-number): Initialize with nil.
	(gdb-overlay-arrow-position): Renamed to
	`gdb-disassembly-position'.
	(gdb-overlay-arrow-position, gdb-thread-position)
	(gdb-disassembly-position): Declare variables.
	(gdb-wait-for-pending): Function now.
	(gdb-add-subscriber, gdb-delete-subscriber, gdb-get-subscribers)
	(gdb-emit-signal, gdb-buf-publisher): Declare before first use so
	compilation goes smoothly.
	(gdb, gdb-non-stop, gdb-buffers): New customization groups.
	(gdb-non-stop-setting): New customization setting which replaces
	`gdb-non-stop' so changing it doesn't break active GDB session.
	(gdb-stack-buffer-locations, gdb-stack-buffer-addresses)
	(gdb-thread-buffer-verbose-names, gdb-thread-buffer-arguments)
	(gdb-thread-buffer-locations, gdb-thread-buffer-addresses)
	(gdb-show-threads-by-default): New customization options.
	(gdb-buffer-type, gdb-buffer-shows-main-thread-p): New helper
	routines.
	(gdb-get-buffer-create): Send buffers update signal when they are
	created.
	(gdb-invalidate-locals, gdb-invalidate-registers)
	(gdb-invalidate-breakpoints)
	(gdb-invalidate-threads, gdb-invalidate-disassembly)